--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,7 +2,7 @@ DEFAULT_HOST!=../default-host.sh
 HOST?=DEFAULT_HOST
 HOSTARCH!=../target-triplet-to-arch.sh $(HOST)
 
-CFLAGS?=-O2 -g -fstack-protector
+CFLAGS?=-O2 -g -fstack-protector-strong -fstack-protector-all
 CPPFLAGS?=
 LDFLAGS?=
 LIBS?=
