--- a/libc/Makefile
+++ b/libc/Makefile
@@ -2,7 +2,7 @@ DEFAULT_HOST!=../default-host.sh
 HOST?=DEFAULT_HOST
 HOSTARCH!=../target-triplet-to-arch.sh $(HOST)
 
-CFLAGS?=-O2 -g -fstack-protector
+CFLAGS?=-O2 -g -fstack-protector-strong -fstack-protector-all
 CPPFLAGS?=
 LDFLAGS?=
 LIBS?=
@@ -39,6 +39,7 @@ string/memcpy.o \
 string/memmove.o \
 string/memset.o \
 string/strlen.o \
+string/strcpy.o \
 
 HOSTEDOBJS=\
 $(ARCH_HOSTEDOBJS) \
